--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,31 @@ en:
   seo:
     title: "Blendin | where people and cultures meet "
     description: "Something"
+  home:
+    index:
+      no_match_msg_htm: "We couldn't find any possible match close to you<br>we are currently based in the Netherlads if you wish to take blendin in your country please write us at: "
+      prev_link: "< 🚶 Prev'"
+      next_link: "Next 🤔 >"
+  blends:
+    index:
+      no_blend_msg: "You dont have any blends yet, start meet new people "
+      no_blend_msg_link: "here"
+    actions:
+      blend_pending_msg_html: "We are elaborating your request. Please wait for approval 🕒.<br />In the meantime a big thank you for making the world a better place together."
+      blend_accept_btn: "Accept"
+      blend_refuse_btn: "Refuse"
+      blend_accept_msg_html: "🎉 That's the spirit! <br>Text/Call me now to meet up asap at:</br>"
+      blend_refuse_msg: "Blend refused 😞. Not really a big deal our community is big and we have a planties of other bleders."
+  users:
+    show:
+      profile_username: "Hey, I'm %{username}!"
+      profile_age: "%{age} years old."
+      profile_education: "My study:"
+      profile_adress: "City/Village:"
+      profile_interest: "Interest in:"
+      profile_study: "Study / Job experience:"
+      profile_about: "About me:"
+      blend_btn: "Blend with %{username}"
+      blend_message_html: "Say hello to <b>%{username}</b> and introduce yourself with some words."
+      blend_message_placeholder: "😉 Hello, my name is ..."
+      blend_message_btn: "Send message"
