--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -7,144 +7,144 @@ nl:
   header:
     main:
       community_link: "Community"
-      my_blends_link: "My blends"
-      settings_link: "Settings"
+      my_blends_link: "Mijn blends"
+      settings_link: "Instellingen"
   home:
     index:
-      no_match_msg_htm: "We couldn't find any possible match close to you<br>we are currently based in the Netherlads if you wish to take blendin in your country please write us at: "
+      no_match_msg_htm: "We hebben geen passende match gevonden voor jou<br>We zijn momenteel slechts actief in Nederland. Ben je geintereseerd om Blendin te beginnen in jouw land? Stuur ons dan een bericht."
       prev_link: "< 🚶 Prev'"
       next_link: "Next 🤔 >"
   blends:
     index:
-      no_blend_msg: "You dont have any blends yet, start meet new people "
-      no_blend_msg_link: "here"
+      no_blend_msg: "Je hebt nog geen Blends. Nodig mensen uit om te ontmoeten!"
+      no_blend_msg_link: "Hier"
     actions:
-      blend_pending_msg_html: "We are elaborating your request. Please wait for approval 🕒.<br />In the meantime a big thank you for making the world a better place together."
-      blend_accept_btn: "Accept"
-      blend_refuse_btn: "Refuse"
-      blend_accept_msg_html: "🎉 That's the spirit! <br>Text/Call me now to meet up asap at:</br>"
-      blend_refuse_msg: "Blend refused 😞. Not really a big deal our community is big and we have a planties of other bleders."
+      blend_pending_msg_html: "Je Blend verzoek is gestuurd. Nu is het wachten op een reactie 🕒.<br />In de tussentijd willen we je bedanken voor het samen mooier maken van onze wereld."
+      blend_accept_btn: "Accepteer"
+      blend_refuse_btn: "Weigeren"
+      blend_accept_msg_html: "Super🎉! Dat is een goede instelling. <br> Stuur me een bericht op dit nummer zodat we een afspraak kunnen maken:</br>"
+      blend_refuse_msg: "Blend geweigerd😞. Maak je geen zorgen we hebben meer dan genoeg andere Blenders op het platform!"
   users:
     show:
-      profile_username: "Hey, I'm %{username}!"
-      profile_age: "%{age} years old."
-      profile_education: "My study:"
-      profile_address: "City/Village:"
-      profile_interest: "Interest in:"
-      profile_study: "Study / Job experience:"
-      profile_about: "About me:"
-      blend_btn: "Blend with %{username}"
-      blend_message_html: "Say hello to <b>%{username}</b> and introduce yourself with some words."
-      blend_message_placeholder: "😉 Hello, my name is ..."
-      blend_message_btn: "Send message"
+      profile_username: "Hey, mijn naam is %{username}!"
+      profile_age: "%{age} jaar oud."
+      profile_education: "Mijn studie:"
+      profile_address: "Stad/ dorp:"
+      profile_interest: "Mijn interesses:"
+      profile_study: "Studie/ werk ervaring:"
+      profile_about: "Wat meer over mij:"
+      blend_btn: "Blend met %{username}"
+      blend_message_html: "`Stel jezelf voor aan <b>%{username}</b> en vraag om een keer te Blenden."
+      blend_message_placeholder: "😉 Hallo, mijn naam is ..."
+      blend_message_btn: "Stuur bericht"
   wizard:
     index:
-      greetings_html: "Hi %{username},<br> Before you can meet people through Blendin we need some information. The more you complete your profile the better matches you will find."
-      local_label: "Please select an option:"
-      local_true: "I'm a local"
-      local_false: "I'm not a local (newcomer)"
-      gender_label: "Please select an option:"
-      gender_male: "I'm a man 👨"
-      gender_female: "I'm a woman 👩"
-      birthday_label: "🎂 Date of Birth:"
-      address_label: "🌇 Where do you live?"
-      address_placeholder: "Ex. Amsterdam, Netherlands"
-      country_label: "🇸🇾 🇳🇱 Country of origin:"
-      country_placeholder: "Ex. Syria"
-      interest_label: "📙 Choose your interest from the list:"
-      interest_helper: "(Choose at least three interest form the list. The more the better.)"
-      job_label: "💪 Study and/or work experience:"
-      job_placeholder: "Ex. Car engineer or lawyer"
-      job_helper: "(This could be your previous job/study.)"
-      phone_label: "📱 Phone number:"
-      phone_placeholder: "Ex. 0612345678"
-      about_label: "💬 Tell more about yourself: "
-      about_helper: "(This is not mandatory but it will help you to connect with others in the community.)"
-      submit_btn: "Confirm and continue"
+      greetings_html: "Hoi %{username},<br> Voordat je mensen kunt ontmoeten op Blendin hebben we wat informatie nodig. Een uitgebreid rofiel helpt je bij het vinden van goede matches."
+      local_label: "Selecteer een optie:"
+      local_true: "Ik ben een local"
+      local_false: "Ik ben een nieuwkomer"
+      gender_label: "Selecteer een optie:"
+      gender_male: "Ik ben een man 👨"
+      gender_female: "Ik ben een vrouw 👩"
+      birthday_label: "Geboorte datum 🎂:"
+      address_label: "Waar woon je? 🌇"
+      address_placeholder: "Bijv. Amsterdam"
+      country_label: "Land van herkomst 🇸🇾 🇳🇱:"
+      country_placeholder: "Bijv. Syrie"
+      interest_label: "Kies jouw interesses uit deze lijst 📙"
+      interest_helper: "(Kies minstens 3 interesses. Hoe meer hoe beter! )"
+      job_label: "Studie en/of werk ervaring 💪"
+      job_placeholder: "Bijv. auto monteur of advocaat"
+      job_helper: "(Dit kan dus ook een baan van vroeger zijn.)"
+      phone_label: "Telefoon nummer 📱:"
+      phone_placeholder: "Bijv. 0612345678"
+      about_label: "Vertel meer over jezelf💬: "
+      about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
+      submit_btn: "Bevestig en ga door"
     top_nav:
-      profile: "Profile"
-      photo: "Photo"
-      settings: "Settings"
+      profile: "Profiel"
+      photo: "Foto"
+      settings: "Instellingen"
     upload:
-      label: "Upload/change your picture:"
-      btn_skip: "Skip"
+      label: "Upload/verander jouw foto:"
+      btn_skip: "Sla over"
       btn_upload: "Upload ->"
-      error: "File not supported! Please upload one of the following file: png, jpeg, jpg."
+      error: "Bestand niet ondersteund! Upload een van de volgende bestandformaties: png, jpeg, jpg."
   layouts:
     mailer:
-      footer: "Sent by"
+      footer: "Verstuurd door"
   user_mailer:
     welcome_email:
-      greetings: "Welcome %{username},"
-      msg_html: "Your account has been created - connecting with newcomers/locals has never been easier.</p>
-      <p><strong>Here are three ways for you to get the most out of it:</strong>"
-      match_msg_html: "Find Your Match</strong><br> Find newcomers/locals with the same age and interests as you."
-      match_link: "Get started!"
-      upload_msg_html: "Upload a Profile Photo</strong><br> Personalize your profile and help people recognize you."
-      upload_link: "Uplaod photo"
-      profile_msg_html: "Edit Your Profile</strong><br> Describe your personal interests, work experience & contact info."
-      profile_link: "Complete now!"
+      greetings: "Welkom %{username},"
+      msg_html: "Jouw account is aangemaakt - in contact komen met locals/ nieukomers is nog nooit zo makkelijk geweest.</p>
+      <p><strong>Hier zijn drie stappen die de kans op het vinden van een passende Blend het grootst maakt:</strong>"
+      match_msg_html: "Vind jouw match </strong><br> Blend met nieuwkomers/ locals van dezelfde leeftijd en met dezelfde intersses."
+      match_link: "Nu gaat het beginnen!"
+      upload_msg_html: "Upload een profiel</strong><br> Maak je profiel zo persoonlijk mogelijk zodat mensen je herkennen."
+      upload_link: "Upload foto"
+      profile_msg_html: "Pas je profiel aan </strong><br> Beschrijf jouw persoonlijke interesses, werk ervaring en contact informatie."
+      profile_link: "Maak het compleet!"
   blend_mailer:
     blend_accepted_email:
-      main_msg: "%{sender}, your Blend resquest was accepted!"
-      secundary_msg: "Get in touch with %{recipient} and start blending."
-      phone_msg: "That's the spirit! Call me to arrange a meet-up as soon as possible at:"
-      email_msg: "That's the spirit! Text me to arrange a meet-up as soon as possible at:"
-      btn: "See full profile"
+      main_msg: "%{sender}, jouw Blend verzoek is geaccepteerd!"
+      secundary_msg: "Kom in contact met %{recipient} and start 'Blending'."
+      phone_msg: "Super! Dat is een goede instelling. Stuur me een bericht op dit nummer zodat we een afspraak kunnen maken:"
+      email_msg: "Super! Dat is een goede instelling. Stuur me een bericht op dit nummer zodat we een afspraak kunnen maken:"
+      btn: "Zie volledig profiel"
     blend_rejected_email:
       main_msg: "%{sender}, sorry..."
-      secundary_msg: "Unfortunately your Blend request was declined, but don't worry, there are lots of newcomers/locals waiting for your request"
-      btn: "See more newcomers/locals"
+      secundary_msg: "Helaas is jouw Blend verzoek geweigerd, maar maak je niet druk. We hebben genoeg andere die wachten op jouw verzoek!"
+      btn: "Zie meer nieuwkomers/ locals"
     blend_request_email:
-      main_msg: "%{recipient}, you have a new Blend request!"
-      secundary_msg: "%{sender} send you a message and wants to Blend with you."
-      profile_msg_start: "Check my "
-      profile_link: "profile "
-      profile_msg_end: "for more information."
-      btn_accept: "Accept"
-      btn_refuse: "Refuse"
+      main_msg: "%{recipient}, je hebt een nieuw Blend verzoek!"
+      secundary_msg: "%{sender} heeft je een bericht gestuurd en wilt graag met je in contact komen."
+      profile_msg_start: "Kijk naar mijn "
+      profile_link: "profiel"
+      profile_msg_end: "voor meer informatie."
+      btn_accept: "Accepteer"
+      btn_refuse: "Weigeren"
   devise:
     confirmations:
       new:
-        header: "Resend confirmation instructions"
+        header: "Stuur confirmatie instructies nogmaals"
     passwords:
       new:
-        header: "Forgot your password?"
-        btn_submit: "Send reset link"
-        email_placeholder: "Type your email address"
+        header: "Wachtwoord vergeten?"
+        btn_submit: "Stuur reset link"
+        email_placeholder: "Vul je email adres in"
       edit:
-        header: "Change your password"
-        pass_placeholder: "Type a new password"
-        pass_conf_placeholder: "Confirm the new password"
-        btn_submit: "Change my password"
+        header: "Wijzig je wachtwoord"
+        pass_placeholder: "Vul je nieuwe wachtwoord in"
+        pass_conf_placeholder: "Bevestig het nieuwe wachtwoord"
+        btn_submit: "Verander mijn wachtwoord"
     registrations:
       new:
         email_placeholder: "Email"
-        pass_placeholder: "Password (min 6char)"
-        terms_and_conditions: "I read and agree the"
+        pass_placeholder: "Wachtwoord (min 6)"
+        terms_and_conditions: "Ik accepteer bij deze de algemene voorwaarde en privacy policy"
         privacy_policy: "Privacy Policy"
-        btn_submit: "Sign up"
+        btn_submit: "Meld aan"
       edit:
         form_email: "Email"
         confirmation_msg: "Currently waiting confirmation for: %{email}."
-        form_fulln_name: "Full name"
-        form_current_pass_html: "Current password</label> <i>(we need your current password to confirm your changes)</i>"
+        form_fulln_name: "Volledige naam"
+        form_current_pass_html: "Huidig wachtwoord </label> <i>(we hebben je huidige wachtwoord nodig om de verandering te bevestigen)</i>"
         btn_submit: "Update"
-        cancel_account_msg: "Cancel my account, Unhappy?"
-        cancel_account_btn: "Cancel my account"
-        cancel_account_confirmation: "Are you sure?"
+        cancel_account_msg: "Unhappy? Verwijder mijn account."
+        cancel_account_btn: "Verwijder mijn account"
+        cancel_account_confirmation: "Weet je het zeker?"
     sessions:
       new:
         email_placeholder: "Email"
-        pass_placeholder: "Password"
-        btn_submit: "Sign in"
+        pass_placeholder: "Wachtwoord"
+        btn_submit: "Meld aan"
     shared:
       links:
-        already_have_an_account: "I have already an account"
-        register: "Register"
-        forgot_pass: "Forgot your password?"
-        didnt_receive_confirmation: "Didn't receive confirmation instructions?"
-        didnt_receive_unlock_confirmation: "Didn't receive unlock instructions?"
+        already_have_an_account: "Ik heb al een account"
+        register: "Registreer"
+        forgot_pass: "Wachtwoord vergeten?"
+        didnt_receive_confirmation: "Heb je geen bevestigingsinstructies ontvangen?"
+        didnt_receive_unlock_confirmation: "Heb je geen unlock instructies ontvangen?"
   activerecord:
     errors:
       messages:
